--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 read up on a star
-create visuals for start point, end point, wall
-add ability to delete 
+create visuals for start point, end point
+
 
 
 
